recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: not found: value shrnk
    avance(shrnk*length)
           ^