recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
if ( steps==0)  { return  }
else {
    avance(length)
    droite(angle)
    avance(shrnk*length)
    tree(steps-1,length,angle,shrink)
    gauche(length)
    tree(steps-2,length,angle,shrink)
    }
}

